# rust-modinverse

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  justfile
.github/: CODEOWNERS
.github/workflows/: CLAUDE.md  ci.yml  publish.yml
benches/: modinverse.rs
extraction/: CLAUDE.md  Machine.lean
proof/: CLAUDE.md  Gate.lean  ModInverse.lean  lake-manifest.json  lakefile.toml  trusted.sha256
proof/ModInverse/: CLAUDE.md  Extern.lean  Model.lean  Proofs.lean  Refinement.lean  Signed.lean  Targets.lean
proof/ModInverse/Refinement/: CLAUDE.md  Egcd.lean  Helpers.lean  Platform.lean  Signed.lean  Unsigned.lean
src/: CLAUDE.md  lib.rs
